-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12
-
Component/s: core-libs
-
b03
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8225519 | 11.0.5-oracle | Brian Burkhalter | P4 | Resolved | Fixed | b01 |
| JDK-8221919 | 11.0.4 | Brian Burkhalter | P4 | Resolved | Fixed | b01 |
The uses of readdir_r in java.base/unix/native should be changed to use readdir instead.
- backported by
-
JDK-8221919 Native Unix code should use readdir rather than readdir_r
-
- Resolved
-
-
JDK-8225519 Native Unix code should use readdir rather than readdir_r
-
- Resolved
-
- relates to
-
JDK-8207744 Clean up inconsistent use of opendir/closedir versus opendir64/closedir64
-
- Resolved
-
-
JDK-8207770 Build failure after "8202794: Native Unix code should use readdir rather than readdir_r"
-
- Closed
-
-
JDK-8166372 Improve readdir_r buffer handling in TimeZone_md.c
-
- Closed
-
-
JDK-8202353 os::readdir should use readdir instead of readdir_r
-
- Resolved
-
-
JDK-8207748 Fix for 8202794 breaks tier1 builds
-
- Resolved
-
- links to