8202794: Native Unix code should use readdir rather than readdir_r

Reviewed-by: alanb, bsrbnd